fix: align activity bar with tab bar

--- a/src/css/horizontal_activity_bar.css
+++ b/src/css/horizontal_activity_bar.css
@@ -1,6 +1,10 @@
 .activitybar {
     width: 100% !important;
-    height: 24px !important;
+    height: 37px !important;
+    border-top: 1px solid var(--vscode-activityBar-border);
+    border-bottom: 1px solid var(--vscode-activityBar-border);
+    display: flex;
+    align-items: center;
 }
 .monaco-workbench .activitybar > .content {
     height: unset !important;
@@ -22,7 +26,7 @@
     :not(.monaco-menu)
     > .monaco-action-bar
     .action-label.codicon {
-    font-size: 16px !important;
+    font-size: 18px !important;
 }
 
 .monaco-workbench
@@ -33,4 +37,14 @@
     .action-label {
     height: 24px !important;
     width: 24px !important;
+}
+
+.monaco-action-bar .action-item {
+    display: flex !important;
+    &.checked {
+        border-bottom: 2px solid var(--vscode-activityBar-foreground) !important;
+        & .action-label {
+            color: var(--vscode-activityBar-inactiveForeground) !important;
+        }
+    }
 }
